Fixed error between mapping to menuItemDTO. #62